front: FAQ update screen features

--- a/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<nb-card [ngClass]="'px-2 py-1'" >
+<nb-card [ngClass]="'px-2 py-1'">
   <nb-card-body [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_BODY : CSS_WIDER_CARD_BODY">
     <div [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_PART : CSS_WIDER_CARD_PART">
       <nb-select [size]="'small'"
@@ -23,10 +23,11 @@
                  (ngModelChange)="selectedTagsChanged($event)"
                  placeholder="Tags">
         <nb-option *ngFor="let tag of availableTags" value="{{tag}}">
-         {{tag}}
+          {{tag}}
         </nb-option>
       </nb-select>
-      <nb-checkbox [checked]="onlyActives" (checkedChange)="toggleOnlyActives($event)"ngClass="ml-2 d-flex">Active</nb-checkbox>
+      <nb-checkbox [checked]="onlyActives" (checkedChange)="toggleOnlyActives($event)" ngClass="ml-2 d-flex">Active
+      </nb-checkbox>
 
       <div class="tock-divider"></div>
     </div>
@@ -43,15 +44,17 @@
                  (keyup.enter)="search()"
                  [ngModelChangeDebounceTime]="1000"
                  (ngModelChangeDebounced)="searchChange($event)"
-                 fullWidth fieldSize="medium" />
+                 fullWidth fieldSize="medium"/>
         </div>
       </nb-form-field>
       <div class="tock-divider ml-2"></div>
     </div>
 
-    <div *ngIf="!isDockedOrSmall()" [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_PART : CSS_WIDER_CARD_PART">
-      <button class="mr-2" nbButton status="basic">Export FAQ</button>
-      <button (click)="importFaq()" class="mr-2" nbButton status="basic">Import FAQ</button>
+    <div *ngIf="!isDockedOrSmall()"
+         [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_BUTTON_PART : CSS_WIDER_CARD_BUTTON_PART ">
+      <!-- NOT YET IMPLEMENTED-->
+      <!--      <button class="mr-2" nbButton status="basic">Export FAQ</button>-->
+      <!--      <button (click)="importFaq()" class="mr-2" nbButton status="basic">Import FAQ</button>-->
       <button (click)="newFaqDefinition()" nbButton status="primary">New FAQ</button>
     </div>
 
@@ -69,8 +72,11 @@
 
 <ng-template #menu>
   <nb-card [style]="{'margin-bottom': 0}">
-      <button class="d-block" fullWidth nbButton ghost size="small" (click)="newFaqDefinition()" status="primary">New FAQ</button>
-      <button class="d-block" fullWidth nbButton ghost size="small" status="basic">Export FAQ</button>
-      <button class="d-block" fullWidth nbButton ghost size="small" (click)="importFaq()" status="basic">Import FAQ</button>
+    <button class="d-block" fullWidth nbButton ghost size="small" (click)="newFaqDefinition()" status="primary">New
+      FAQ
+    </button>
+    <!-- NOT YET IMPLEMENTED-->
+    <!--      <button class="d-block" fullWidth nbButton ghost size="small" status="basic">Export FAQ</button>-->
+    <!--      <button class="d-block" fullWidth nbButton ghost size="small" (click)="importFaq()" status="basic">Import FAQ</button>-->
   </nb-card>
 </ng-template>
