--- a/bot/admin/web/src/app/faq/qa/qa.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h5 class="h5 mb-4">Questions & Answers {{applicationName}}</h5>
+<h5 class="h5 mb-4">FAQ {{applicationName}}</h5>
 
 <!-- SEARCH BAR -->
 <tock-qa-header [ngClass]="{ 'tock--docked': isDocked(), 'tock-header': true }"
