--- a/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.html
@@ -45,8 +45,9 @@
     </div>
     <div class="tock-divider ml-3">&nbsp;</div>
     <div class="tock-col-d d-flex justify-content-end">
-      <nb-toggle status="basic" [ngModel]="item.enabled" (mousedown)="toggleEnabled($event)">
-      </nb-toggle>
+      <!-- NOT YET IMPLEMENTED -->
+      <!--      <nb-toggle status="basic" [ngModel]="item.enabled" (mousedown)="toggleEnabled($event)">
+      </nb-toggle>-->
 
       <button class="tock-action tock--subtle-hover text-muted"
               (click)="edit()"
