front : hide active & backend reformating code

--- a/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
@@ -26,8 +26,9 @@
           {{tag}}
         </nb-option>
       </nb-select>
+      <!-- NOT YET IMPLEMENTED
       <nb-checkbox [checked]="onlyActives" (checkedChange)="toggleOnlyActives($event)" ngClass="ml-2 d-flex">Active
-      </nb-checkbox>
+      </nb-checkbox>-->
 
       <div class="tock-divider"></div>
     </div>
