--- a/bot/admin/web/src/app/faq/faq-definition/faq-grid/faq-grid.component.scss
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-grid/faq-grid.component.scss
@@ -14,21 +14,31 @@
  * limitations under the License.
  */
 
-import { Component, OnInit } from '@angular/core';
+@import  '../../common/_base_faq.scss';
+@import '~@nebular/theme/styles/theming';
+@import '~@nebular/theme/styles/themes';
 
-@Component({
-  selector: 'tock-qa-sidepanel-import-content',
-  templateUrl: './qa-sidepanel-import-content.component.html',
-  styleUrls: ['./qa-sidepanel-import-content.component.scss']
-})
-export class QaSidepanelImportContentComponent implements OnInit {
+@include faq-grid-style();
 
-  constructor() { }
+@include nb-install-component { /* Nebular theme dependent classes */
 
-  ngOnInit(): void {
-  }
-
-  importFaq(): void {
-
+  /* When item selected, apply special style */
+  tock-faq-grid-item.tock--selected {
+    border-left: 7px solid nb-theme(color-primary-500);
+    padding-left: 10px
   }
 }
+
+/* Grid should take available space */
+:host {
+  flex: 0 0 100%;
+}
+
+/* Image displayed when there is no data */
+.tock-robot {
+  width: 8%;
+  margin-right: 20px;
+}
+
+
+
