feat(faq-training): rename title, add placeholder to search bar

--- a/bot/admin/web/src/app/faq/train/train-header/train-header.component.html
+++ b/bot/admin/web/src/app/faq/train/train-header/train-header.component.html
@@ -45,6 +45,7 @@
                 </div>
                 <div class="nb-form-control-container nb-form-field-control-with-prefix tock-bar-search">
                     <input type="text"
+                           placeholder="Search"
                            [(ngModel)]="filter.search"
                            (keyup.enter)="search()"
                            [ngModelChangeDebounceTime]="1000"
