--- a/bot/admin/web/src/app/faq/train/train.component.html
+++ b/bot/admin/web/src/app/faq/train/train.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h5 class="h5 mb-4">Qualification {{applicationName}}</h5>
+<h5 class="h5 mb-4">FAQ Training</h5>
 <tock-train-header [ngClass]="{ 'tock--docked': isDocked() }" [filter]="filter" (onSearch)="search($event)">
 </tock-train-header>
 <div class="tock-train-viewport d-flex justify-content-between w-100"
