--- a/bot/admin/web/src/app/theme/styles/styles.scss
+++ b/bot/admin/web/src/app/theme/styles/styles.scss
@@ -32,6 +32,7 @@
 
 @import './layout';
 @import './overrides';
+@import './shared';
 
 // install the framework and custom global styles
 @include nb-install() {
