feat: search with enabled/disabled indeterminate checkbox

--- a/bot/admin/web/src/app/faq/faq-definition/faq-header/faq-header.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-header/faq-header.component.html
@@ -28,9 +28,8 @@
           {{tag}}
         </nb-option>
       </nb-select>
-      <!-- NOT YET IMPLEMENTED
-      <nb-checkbox [checked]="onlyActives" (checkedChange)="toggleOnlyActives($event)" ngClass="ml-2 d-flex">Active
-      </nb-checkbox>-->
+      <nb-checkbox [checked]="activationStatus" [indeterminate]="activationStatus === null" [ngModel]="activationStatus" (ngModelChange)="toggleFaqActivationSearch($event)" ngClass="ml-2 d-flex">Active
+      </nb-checkbox>
 
       <div class="tock-divider"></div>
     </div>
