--- a/bot/admin/web/src/app/faq/faq-definition/sidepanels/faq-sidepanel-editor-content/faq-sidepanel-editor-content.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/sidepanels/faq-sidepanel-editor-content/faq-sidepanel-editor-content.component.html
@@ -18,11 +18,21 @@
   <div [ngClass]="(tabName === 'Info') ? 'tock--active' : 'tock--hidden'">
     <div class="tock-field mb-3">
       <label class="d-block mb-1"> Name <span class="text-muted">(*)</span></label>
-      <input nbInput status="{{getControlStatus('name')}}"
-             fieldSize="small" class="d-block w-100" formControlName="name"
-             placeholder="Heptadecagon question" type="text"/>
+      <input
+        nbInput
+        formControlName="name"
+        class="d-block w-100"
+        fieldSize="small"
+        placeholder="Heptadecagon question"
+        status="{{getControlStatus('name')}}"
+        type="text"
+      />
+      <tock-error-helper
+        *ngIf="isControlAlert('name')"
+        [field]="newFaqForm.controls['name']"
+      ></tock-error-helper>
 
-      <nb-alert accent="warning" *ngIf="isControlAlert('name')">
+      <!--<nb-alert accent="warning" *ngIf="isControlAlert('name')">
         {{
           newFaqForm.controls['name'].errors.required ? ERR_MSG.name_required :
           newFaqForm.controls['name'].errors.minlength ? ERR_MSG.name_minlength :
@@ -30,25 +40,31 @@
              ERR_MSG.name_error
 
         }}
-      </nb-alert>
+      </nb-alert>-->
     </div>
     <div class="tock-field d-flex h-25 flex-column mb-3 ">
       <label class="d-block mb-1"> Description</label>
 
-      <textarea nbInput
-                status="{{getControlStatus('description')}}"
-                class="d-block w-100 col"
-                fieldSize="small"
-                formControlName="description"
-                placeholder="Knowing more about what a heptadecagon specifically is"></textarea>
+      <textarea
+        nbInput
+        formControlName="description"
+        class="d-block w-100 col"
+        fieldSize="small"
+        placeholder="Knowing more about what a heptadecagon specifically is"
+        status="{{getControlStatus('description')}}"
+      ></textarea>
+      <tock-error-helper
+        *ngIf="isControlAlert('description')"
+        [field]="newFaqForm.controls['description']"
+      ></tock-error-helper>
 
-      <nb-alert accent="warning" *ngIf="isControlAlert('description')">
+      <!--<nb-alert accent="warning" *ngIf="isControlAlert('description')">
         {{
             newFaqForm.controls['description'].errors.maxlength ?
               ERR_MSG.description_maxlength :
               ERR_MSG.description_error
         }}
-      </nb-alert>
+      </nb-alert>-->
     </div>
 
     <div class="tock-field mb-3">
@@ -73,17 +89,24 @@
   </div>
   <div [ngClass]="(tabName === 'Answer') ? 'tock--active' : 'tock--hidden'">
     <div class="tock-field d-flex h-100 flex-column mb-3 ">
-      <textarea nbInput
-                class="d-block w-100 col m-auto"
-                fieldSize="small"
-                formControlName="answer"
-                placeholder="A heptadecagon or septadecagon or 17-gon is a shape with 17 sides and 17 corners."></textarea>
-      <nb-alert accent="warning" *ngIf="isControlAlert('answer')">
+      <textarea
+        nbInput
+        formControlName="answer"
+        class="d-block w-100 col"
+        fieldSize="small"
+        placeholder="A heptadecagon or septadecagon or 17-gon is a shape with 17 sides and 17 corners."
+      ></textarea>
+      <tock-error-helper
+        *ngIf="isControlAlert('answer')"
+        [field]="newFaqForm.controls['answer']"
+      ></tock-error-helper>
+
+      <!--<nb-alert accent="warning" *ngIf="isControlAlert('answer')">
         {{
           newFaqForm.controls['answer'].errors.maxlength ?
             ERR_MSG.answer_maxlength : ''
         }}
-      </nb-alert>
+      </nb-alert>-->
     </div>
   </div>
   <div [ngClass]="(tabName === 'Question') ? 'tock--active' : 'tock--hidden'">
