--- a/bot/admin/web/src/app/faq/faq-definition/faq-header/faq-header.component.scss
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-header/faq-header.component.scss
@@ -21,7 +21,7 @@
 
 /* Search control input part */
 .tock-search-bar {
-  width: calc(100% - 40px);
+  width: 100%;
 }
 
 /* Button for Menu Buttons when there is not enough space */
