feat(faq): add redirection with state to pass the question for create new faq

--- a/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
@@ -47,7 +47,7 @@
           </nb-option>
         </nb-select>
         <div class="input-group-append ml-1">
-          <button class="tock-btn-addfaq input-group-text tock--subtle-hover" (click)="newIntent()">
+          <button class="tock-btn-addfaq input-group-text tock--subtle-hover" (click)="redirectToFaqManagement()">
             <nb-icon nbPrefix pack="material-icons" icon="add_circle_outline"></nb-icon>
           </button>
         </div>
