style(faq): update template

--- a/bot/admin/web/src/app/faq/train/train-header/train-header.component.html
+++ b/bot/admin/web/src/app/faq/train/train-header/train-header.component.html
@@ -15,7 +15,7 @@
   -->
 
 <nb-card ngClass="px-2 py-1">
-    <nb-card-body class="d-flex align-items-center p-2 flex-wrap">
+    <nb-card-body class="d-flex align-items-center flex-wrap">
         <div class="col-4 d-none justify-content-between">
 
             <nb-select [size]="'small'" placeholder="Tags">
