--- a/bot/admin/web/src/app/faq/faq-definition/faq-grid-item/faq-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-grid-item/faq-grid-item.component.html
@@ -17,61 +17,79 @@
 <h6 class="tock-toggleable mb-1" [ngClass]="cssState">{{item.title}}</h6>
 <div class="d-flex w-100 justify-content-between">
   <div class="pb-2 d-flex align-items-center">
-    <div class="tock-additional-info d-inline-block ml-1">
-      {{item.utterances.length}} Question{{item.utterances.length === 1 ? '' : 's'}}
-    </div>
+    <small class="mr-1">
+      {{ item.utterances.length }} Question{{ item.utterances.length === 1 ? '' : 's' }}
+    </small>
   </div>
 
   <div class="tock-tags-box pb-2">
     <nb-tag-list>
-      <nb-tag *ngFor="let tag of item.tags"
-              [ngClass]="'mb-0'"
-              [text]="tag"
-              [removable]="false"
-              size="small" appearance="outline">
+      <nb-tag
+        *ngFor="let tag of item.tags"
+        class="mb-0"
+        appearance="outline"
+        size="small"
+        [text]="tag"
+        [removable]="false"
+      >
       </nb-tag>
     </nb-tag-list>
   </div>
 </div>
 <nb-card [ngClass]="['overflow-hidden', 'mb-2', 'tock-toggleable', cssState]">
-  <nb-card-body class="d-flex p-2 justify-content-between overflow-hidden"
-                [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_BODY : CSS_WIDER_CARD_BODY">
-    <div [ngClass]="isDockedOrSmall() ? CSS_SMALL_FIRST_CARD_PART : CSS_WIDER_FIRST_CARD_PART">
-      {{getFirstUtterance()}}
-    </div>
-    <div class="tock-divider ml-3">&nbsp;</div>
-    <div class="tock-col-b d-flex justify-content-between ">
-      {{item.answer}}
-    </div>
-    <div class="tock-divider ml-3">&nbsp;</div>
-    <div class="tock-col-d d-flex justify-content-end">
-      <nb-toggle status="basic" [ngModel]="item.enabled" (mousedown)="toggleEnabled($event)">
-      </nb-toggle>
+  <nb-card-body>
+    <div class="row">
+      <div class="col mt-2 mb-2">
+        <small class="d-block text-muted">First question</small>
+        {{ getFirstUtterance() }}
+      </div>
 
-      <button class="tock-action tock--subtle-hover text-muted"
-              (click)="edit()"
-              title="Edit"
-              nbButton size="medium" ghost status="secondary">
-        <nb-icon icon="edit-outline"></nb-icon>
-        <ng-container *ngIf="viewMode === 'FULL_WIDTH'">Edit</ng-container>
-      </button>
+      <div class="col mt-2 mb-2">
+        <small class="d-block text-muted">Answer</small>
+        {{ item.answer }}
+      </div>
 
-      <button class="tock-action tock--subtle-hover text-muted"
-              (click)="download()"
-              title="Download"
-              nbButton size="medium" ghost status="secondary">
-        <nb-icon icon="download-outline"></nb-icon>
-        <ng-container *ngIf="viewMode === 'FULL_WIDTH'">Download</ng-container>
-      </button>
+      <div class="col-lg-auto mt-2 mb-2 d-flex align-items-center">
+        <nb-toggle
+          nbTooltip="Disable"
+          status="basic"
+          [ngModel]="item.enabled"
+          (mousedown)="toggleEnabled($event)"
+        ></nb-toggle>
 
-      <button class="tock-action tock--subtle-hover text-muted"
-              (click)="remove()"
-              title="Delete"
-              nbButton size="medium" ghost status="secondary">
-        <nb-icon icon="trash-2-outline"></nb-icon>
-        <ng-container *ngIf="viewMode === 'FULL_WIDTH'">Delete</ng-container>
-      </button>
+        <button
+          nbButton
+          nbTooltip="Edit"
+          class="tock-action tock--subtle-hover text-muted"
+          ghost
+          status="secondary"
+          (click)="edit()"
+        >
+          <nb-icon icon="edit-outline"></nb-icon>
+        </button>
 
+        <button
+          nbButton
+          nbTooltip="Download"
+          class="tock-action tock--subtle-hover text-muted"
+          ghost
+          status="secondary"
+          (click)="download()"
+        >
+          <nb-icon icon="download-outline"></nb-icon>
+        </button>
+
+        <button
+          nbButton
+          nbTooltip="Delete"
+          class="tock-action tock--subtle-hover text-muted"
+          ghost
+          status="secondary"
+          (click)="remove()"
+        >
+          <nb-icon icon="trash-2-outline"></nb-icon>
+        </button>
+      </div>
     </div>
   </nb-card-body>
 </nb-card>
