style(faq-definition): replace material icon of the alert component with eva icon

--- a/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
@@ -23,8 +23,7 @@
   >
     <nb-icon
       class="mr-1"
-      icon="warning"
-      pack="material-icons"
+      icon="alert-triangle-outline"
       status="warning"
     ></nb-icon>
     No bot configuration detected
