--- a/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.scss
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.scss
@@ -43,6 +43,17 @@
 
 }
 
+.title-faq{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+
+  nb-card{
+    border: none;
+    background:none;
+  }
+}
+
 .tock-form-problems {
   position: absolute;
   user-select: none;
