--- a/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
@@ -14,18 +14,9 @@
   ~ limitations under the License.
   -->
 
-  <div class="title-faq">
-    <nb-card [ngClass]="'px-2 py-1'">
-      <nb-card-body class="row align-items-center">
-        <h5 class="h5 mr-4">FAQ Content Management</h5>
-        <div *ngIf="!isDockedOrSmall()">
-          <!-- NOT YET IMPLEMENTED-->
-          <!--      <button class="mr-2" nbButton status="basic">Export FAQ</button>-->
-          <!--      <button (click)="importFaq()" class="mr-2" nbButton status="basic">Import FAQ</button>-->
-          <button (click)="openNewSidepanel()" nbButton status="primary">New FAQ</button>
-        </div>
-      </nb-card-body>
-    </nb-card>
+  <div class="title-faq mb-4" *ngIf="!isDockedOrSmall()">
+      <h5 class="h5 mr-4">FAQ Content Management</h5>
+      <button (click)="openNewSidepanel()" nbButton status="primary">New FAQ</button>
   </div>
 
   <nb-alert
