Center canvas on newly added entry

--- a/bot/admin/web/src/app/scenarios/scenarios-edit/editor-entry.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-edit/editor-entry.component.html
@@ -16,6 +16,7 @@
 <div [dndDraggable]="draggable.data">
   <div
     class="item-card"
+    #itemCard
     [ngClass]="getItemCardCssClass()"
     dndDropzone
     (dndDrop)="onDrop($event)"
